[gd_scene load_steps=29 format=3 uid="uid://iobfuvd54rd1"]

[ext_resource type="Script" path="res://Scripts/Enemys/boss.gd" id="1_044v0"]
[ext_resource type="PackedScene" uid="uid://jnkl30satsbb" path="res://Scenes/Components/health_component.tscn" id="2_pife1"]
[ext_resource type="PackedScene" uid="uid://5t48vqnhunai" path="res://Scenes/Components/drop_component.tscn" id="3_npwqx"]
[ext_resource type="PackedScene" uid="uid://bjfpqxunjkyw2" path="res://Scenes/Components/velocity_component.tscn" id="4_nnln3"]
[ext_resource type="PackedScene" uid="uid://cfn1tpssanmni" path="res://Scenes/Components/hit_flash_component.tscn" id="5_dcgc2"]
[ext_resource type="Shader" path="res://Resources/Shader/hit_flash_component.gdshader" id="6_dm2y1"]
[ext_resource type="PackedScene" uid="uid://dyrwjscb6nc4p" path="res://Scenes/Components/knockback_component.tscn" id="7_5h2j2"]
[ext_resource type="Script" path="res://Scripts/Components/death_component.gd" id="8_huln6"]
[ext_resource type="PackedScene" uid="uid://d3gbnxq2mchbv" path="res://Scenes/Components/hurtbox_component.tscn" id="9_bqrdk"]
[ext_resource type="AudioStream" uid="uid://dv1vs1wras50r" path="res://Assets/SFX/10_Battle_SFX/69_Enemy_death_01.wav" id="9_kjn5u"]
[ext_resource type="Texture2D" uid="uid://db820rtckwm3r" path="res://Assets/Enemys/Bat_Fly.png" id="10_i8y3w"]
[ext_resource type="Shader" path="res://Shaders/dissolve.gdshader" id="10_oeyqo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fl0w0"]
resource_local_to_scene = true
shader = ExtResource("6_dm2y1")
shader_parameter/lerp_percent = 0.0

[sub_resource type="Animation" id="Animation_n8eqx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/dissolve_pct")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bovoq"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/dissolve_pct")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1.56917, 3.13834),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7kban"]
_data = {
"RESET": SubResource("Animation_n8eqx"),
"default": SubResource("Animation_bovoq")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_82ay0"]
noise_type = 3
seed = 3
frequency = 0.024

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_uudim"]
noise = SubResource("FastNoiseLite_82ay0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wdp6r"]
shader = ExtResource("10_oeyqo")
shader_parameter/dissolve_pct = 0.0
shader_parameter/lerp_percent = 0.6
shader_parameter/noise_text = SubResource("NoiseTexture2D_uudim")

[sub_resource type="CircleShape2D" id="CircleShape2D_tsoqh"]
radius = 36.6742

[sub_resource type="AtlasTexture" id="AtlasTexture_0w6yk"]
atlas = ExtResource("10_i8y3w")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ct6e"]
atlas = ExtResource("10_i8y3w")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_alpe2"]
atlas = ExtResource("10_i8y3w")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1605"]
atlas = ExtResource("10_i8y3w")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_uyncw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w6yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ct6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alpe2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1605")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_byagk"]
bg_color = Color(0, 0.118862, 0.0955543, 1)
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.118862, 0.0955543, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24xpr"]
bg_color = Color(0.772059, 0, 0.281285, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.118862, 0.0955543, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_p4aln"]
radius = 18.2483

[node name="Boss" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_044v0")

[node name="HealthComponent" parent="." instance=ExtResource("2_pife1")]

[node name="DropComponent" parent="." instance=ExtResource("3_npwqx")]

[node name="VelocityComponent" parent="." instance=ExtResource("4_nnln3")]

[node name="HitFlashComponent" parent="." instance=ExtResource("5_dcgc2")]
hit_flash_material = SubResource("ShaderMaterial_fl0w0")

[node name="KnockbackComponent" parent="." instance=ExtResource("7_5h2j2")]
knockback_power = 20.0

[node name="DeathComponent" type="Node2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("8_huln6")
health_component = NodePath("../HealthComponent")

[node name="AnimationPlayer" type="AnimationPlayer" parent="DeathComponent"]
libraries = {
"": SubResource("AnimationLibrary_7kban")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DeathComponent"]
stream = ExtResource("9_kjn5u")
volume_db = -6.0
bus = &"SFX"

[node name="Sprite2D" type="Sprite2D" parent="DeathComponent"]
visible = false
material = SubResource("ShaderMaterial_wdp6r")
scale = Vector2(5, 5)

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("9_bqrdk")]
collision_layer = 64
audio_bus_name = &"SFX"
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -34)
shape = SubResource("CircleShape2D_tsoqh")

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
position = Vector2(0, -59)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_uyncw")

[node name="Shadow" type="ColorRect" parent="Visuals"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -1.0
offset_right = 10.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.556863)
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 8)
offset_left = -32.0
offset_top = 1.0
offset_right = 32.0
offset_bottom = 9.0
pivot_offset = Vector2(32, 4)
theme_override_styles/background = SubResource("StyleBoxFlat_byagk")
theme_override_styles/fill = SubResource("StyleBoxFlat_24xpr")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_p4aln")
